--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "erpnext",
+  "name": "shoperprime",
   "description": "Open Source ERP System powered by the Frappe Framework",
   "repository": {
     "type": "git",
