--- a/shoperprime/shoperprime/page/posapp/posapp.json
+++ b/shoperprime/shoperprime/page/posapp/posapp.json
@@ -6,10 +6,10 @@
  "idx": 0,
  "modified": "2020-09-23 14:53:30.009891",
  "modified_by": "Administrator",
- "module": "shoperprimepos",
- "name": "shoperprimepos",
+ "module": "ShoperPrime POS",
+ "name": "posapp",
  "owner": "Administrator",
- "page_name": "shoperprimepos",
+ "page_name": "posapp",
  "roles": [
   {
    "role": "Sales User"
@@ -31,5 +31,5 @@
  "standard": "Yes",
  "style": null,
  "system_page": 0,
- "title": "shoperprime POS"
+ "title": "ShoperPrime POS"
 }
