--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,15 +4,15 @@ include *.json
 include *.md
 include *.py
 include *.txt
-recursive-include ShoperPrime *.css
-recursive-include ShoperPrime *.csv
-recursive-include ShoperPrime *.html
-recursive-include ShoperPrime *.ico
-recursive-include ShoperPrime *.js
-recursive-include ShoperPrime *.json
-recursive-include ShoperPrime *.md
-recursive-include ShoperPrime *.png
-recursive-include ShoperPrime *.py
-recursive-include ShoperPrime *.svg
-recursive-include ShoperPrime *.txt
-recursive-exclude ShoperPrime *.pyc
+recursive-include shoperprime *.css
+recursive-include shoperprime *.csv
+recursive-include shoperprime *.html
+recursive-include shoperprime *.ico
+recursive-include shoperprime *.js
+recursive-include shoperprime *.json
+recursive-include shoperprime *.md
+recursive-include shoperprime *.png
+recursive-include shoperprime *.py
+recursive-include shoperprime *.svg
+recursive-include shoperprime *.txt
+recursive-exclude shoperprime *.pyc
