--- a/shoperprime/shoperprime/page/posapp/posapp.json
+++ b/shoperprime/shoperprime/page/posapp/posapp.json
@@ -6,7 +6,7 @@
  "idx": 0,
  "modified": "2020-09-23 14:53:30.009891",
  "modified_by": "Administrator",
- "module": "ShoperPrime POS",
+ "module": "shoperprime POS",
  "name": "posapp",
  "owner": "Administrator",
  "page_name": "posapp",
@@ -31,5 +31,5 @@
  "standard": "Yes",
  "style": null,
  "system_page": 0,
- "title": "ShoperPrime POS"
+ "title": "shoperprime POS"
 }
